fix(agent-core): gate the tool batch on per-tool executionMode like pi
pi 的 agent-loop.ts:417-421：**批次里只要有一个 sequential 工具，整批就走顺序路径**
—— 哪怕配置写的是 parallel。pi-java 里这个判据没有对应物：AgentTool.executionMode()
生产零读者（全仓 grep 只命中接口声明），于是含 bash 的批次被当成并行批次处理，
事件形状与 pi 不同（并行路径先发全部 start，顺序路径逐个成组）。

根因是 Context.tools 的类型：它装的是 ToolDefinition（pi **ai 层**的窄定义：名字 +
描述 + 参数），而 pi 的 agent 层 AgentContext.tools 装的是 AgentTool（**带行为的本体**，
executionMode 就在上面）—— pi 靠结构类型把后者直接当定义用，我们合并两个 Context 时
取了窄的那份，判据因此在循环里够不着。现在取宽的那份，provider 边界用新增的
ToolRegistry.definitionsOf(...) 投影成定义（renderShell 本来就是恒 null，投影无损）。

新增 L5 剧本 S10（parallel 配置 + 一个标记 sequential 的 shellish 工具），pi 侧真相由
pi v0.85.1 的 conformance runner 生成：帧序列证明 pi 切到了顺序路径
（tc1 start/end/msg → tc2 start/end/msg）。**反向实验**：把 useSequentialPath 的
executionMode 判据去掉，只有 S10 变红（S1-S9 全绿）—— 剧本有牙。

Co-Authored-By: Claude Code <noreply@anthropic.com>